R1 (master):
Changes:
	- Initial data structures for storing unit states & drawing have been begun
TODO:
	- Grid system
	- Arrow Key Movement